# flight_prices_predictions

./: README.md  pyproject.toml
main_files/: __init__.py  data_info.txt  data_processing.py  main.py  plotting.py  train.py
main_files/data_info_and_plots/: data_info.txt
main_files/models/: linear_regression_model.joblib  tree_regressor_model.joblib  xgbregressor_model.joblib
notebooks/: model_prototyping.ipynb
notebooks/.ipynb_checkpoints/: model_prototyping-checkpoint.ipynb
tests/: test_main.py
